--- a/src/k8s/deployment.yaml
+++ b/src/k8s/deployment.yaml
@@ -37,7 +37,7 @@ spec:
     app: mongodb
   ports:
     - port: 27017
-  type: ClusterIP
+  type: LoadBalancer
 
 ---
 
@@ -86,4 +86,4 @@ spec:
     - port: 80
       targetPort: 5000
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
